<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="P_HMI" Id="{69c4f003-93ff-4784-b1ab-2d85338b70c3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_HMI
VAR
	i : UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//------------------------------------------------------
//--------------------- HMI to PLC ---------------------

IF HmiToPlc.bPositionMode THEN
	// Attempt to enable position mode
	MAIN.robot.eRobotModeCmd := E_RobotMode.POSITION;
END_IF
HmiToPlc.bPositionMode := FALSE;

IF HmiToPlc.bVelocityMode THEN
	// Attempt to enable velocity mode
	MAIN.robot.eRobotModeCmd := E_RobotMode.VELOCITY;
END_IF
HmiToPlc.bVelocityMode := FALSE;

IF HmiToPlc.bTorqueMode THEN
	// Attempt to enable torque mode
	MAIN.robot.eRobotModeCmd := E_RobotMode.TORQUE;	
END_IF
HmiToPlc.bTorqueMode := FALSE;

IF HmiToPlc.bSoftStop THEN
	// Stop
	MAIN.robot.eRobotModeCmd := E_RobotMode.STOP;	
END_IF
HmiToPlc.bSoftStop := FALSE;

MAIN.robot.bReset := HmiToPlc.bReset;
HmiToPlc.bReset := FALSE;

IF HmiToPlc.bEnable THEN
	// Enable joints
	MAIN.robot.bEnable := TRUE;
END_IF
HmiToPlc.bEnable := FALSE;

MAIN.robot.bPositionModeExecute := HmiToPlc.bPositionModeExecute;
HmiToPlc.bPositionModeExecute := FALSE;

Safety.TS_Q_Safety_GroupPort_ErrAck := HmiToPlc.bSafety_GroupPort_ErrAck;
HmiToPlc.bSafety_GroupPort_ErrAck := FALSE;

Safety.TS_Q_Safety_EStopRestart := HmiToPlc.bSafety_EStopRestart;
HmiToPlc.bSafety_EStopRestart := FALSE;

Safety.TS_Q_Safety_Drive_Axis_ErrReset := HmiToPlc.bSafety_Drive_Axis_ErrReset;
HmiToPlc.bSafety_Drive_Axis_ErrReset := FALSE;

FOR i := 0 TO 2 DO
	MAIN.fPosInput[i] := HmiToPlc.fPosInput[i];
	MAIN.fVelInput[i] := HmiToPlc.fVelInput[i];
END_FOR

//------------------------------------------------------
//--------------------- PLC to HMI ---------------------

PlcToHmi.bPositionMode := (MAIN.robot.eRobotMode = E_RobotMode.POSITION);
PlcToHmi.bVelocityMode := (MAIN.robot.eRobotMode = E_RobotMode.VELOCITY);
PlcToHmi.bTorqueMode := (MAIN.robot.eRobotMode = E_RobotMode.TORQUE);

FOR i := 0 TO 2 DO
	PlcToHmi.fPosFb[i] := MAIN.robot.q[i];
	PlcToHmi.fVelFb[i] := MAIN.robot.q_t[i];
	PlcToHmi.fTauFb[i] := MAIN.robot.tau[i];
END_FOR

PlcToHmi.bAnyJointActive := MAIN.robot.bAnyJointActive;
PlcToHmi.bSafety_EStopError := Safety.TS_I_Safety_EStopError;
PlcToHmi.bSafety_EStopOK := Safety.TS_I_Safety_EStopOK;


]]></ST>
    </Implementation>
    <LineIds Name="P_HMI">
      <LineId Id="65" Count="1" />
      <LineId Id="64" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="17" Count="2" />
      <LineId Id="33" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="23" Count="1" />
      <LineId Id="34" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="40" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="57" Count="3" />
      <LineId Id="55" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="109" Count="2" />
      <LineId Id="108" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="31" Count="1" />
      <LineId Id="72" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="75" Count="1" />
      <LineId Id="73" Count="1" />
      <LineId Id="71" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="78" Count="1" />
      <LineId Id="77" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="16" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>